apps/xuty-dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      containers:
        - name: app
          image: xutyxd/xuty.dev:1.2.0 # {"$imagepolicy": "flux-system:xuty-dev"}
