apps/xuty-dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  rules:
    - host: xuty.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xuty-dev-app
                port:
                  number: 80
